# ghop

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  ghop.yml  org.flatpak.ghop.yml
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs  runner.rs
src/tui/: mod.rs
tests/: cli.rs  config_parsing.rs  extra_cli.rs  runner_behavior.rs  version.rs
