[package]
name = "ghop"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync", "net"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
